# znc

./: .appveyor.yml  .clang-format  .codecov.yml  .dockerignore  .gitignore  .gitmodules  .travis-coverity-scan.py  .travis-coverity.yml  .travis-generate-docs.sh  .travis-github.enc  .travis.fix_tsan  .travis.ssh  .travis.yml  .travis_after_all.py  AUTHORS  Buffer.cpp  Buffer.h  CMakeLists.txt  CONTRIBUTING.md  Chan.cpp  Chan.h  ChangeLog.md  ChangeLog.txt  Client.cpp  Client.h  ClientCommand.cpp  Config.cpp  Config.h  CreatePem.sh  Csocket.cpp  Csocket.h  DCCBounce.cpp  DCCBounce.h  DCCSock.cpp  DCCSock.h  Dockerfile  Doxyfile  ExecSock.h  FileUtils.cpp  FileUtils.h  (+82 more)
cmake/perl_check/: CMakeLists.txt  main.cpp
cmake/qt5check/: CMakeLists.txt  main.cpp
include/znc/: Asio.h  Buffer.h  CMakeLists.txt  Chan.h  Client.h  Config.h  Csocket.h  ExecSock.h  FileUtils.h  HTTPSock.h  IRCNetwork.h  IRCSock.h  Listener.h  MD5.h  Message.h  Modules.h  Nick.h  Query.h  SHA256.h  SSLVerifyHost.h  Server.h  Socket.h  Template.h  Threads.h  Translation.h  User.h  Utils.h  WebModules.h  ZNCDebug.h  ZNCString.h  defines.h  main.h  version.h  version.h.in  znc.h  zncconfig.h.cmake.in  zncconfig.h.in
modules/: CMakeLists.txt  Makefile.in  Makefile.modtcl  ZNC.pm  admin.cpp  admindebug.cpp  adminlog.cpp  alias.cpp  antiidle.cpp  api.cpp  authtoservices.cpp  autoattach.cpp  autocycle.cpp  autohalfop.cpp  automode.cpp  autoop.cpp  autoreply.cpp  autovoice.cpp  away.cpp  awaynick.cpp  awaystore.cpp  block_motd.cpp  blockuser.cpp  bouncedcc.cpp  buddylist.cpp  buffextras.cpp  buildmod  buildmod.in  cert.cpp  certauth.cpp  chanfilter.cpp  chansaver.cpp  charset.cpp  clearbufferonmsg.cpp  clientbuffer.cpp  clientnotify.cpp  control.cpp  controlpanel.cpp  corecaps.cpp  crypt.cpp  (+65 more)
modules/blockuser/tmpl/: blockuser_WebadminUser.tmpl
modules/data/authtoservices/tmpl/: index.tmpl
modules/data/blockuser/tmpl/: blockuser_WebadminUser.tmpl
modules/data/cert/tmpl/: index.tmpl
modules/data/certauth/tmpl/: index.tmpl
modules/data/lastseen/tmpl/: index.tmpl  lastseen_WebadminUser.tmpl
modules/data/listsockets/tmpl/: index.tmpl
modules/data/log/tmpl/: index.tmpl
modules/data/logviewer/tmpl/: index.tmpl
modules/data/notes/tmpl/: index.tmpl
modules/data/otpauth/tmpl/: index.tmpl  regen.tmpl
modules/data/perform/tmpl/: index.tmpl
modules/extra/: antiidle.cpp  autoaway.cpp  autocycle.cpp  autovoice.cpp  away.cpp  binds.tcl  block_motd.cpp  blockuser.cpp  charset.cpp  clearbufferonmsg.cpp  connect_throttle.cpp  ctcpflood.cpp  dcc.cpp  discon_kick.cpp  droproot.cpp  email.cpp  fakeonline.cpp  flooddetach.cpp  imapauth.cpp  lastseen.cpp  listsockets.cpp  log.cpp  manualconnect.cpp  modtcl.cpp  modtcl.tcl  motdfile.cpp  notify_connect.cpp  replaybuffer.cpp  saslauth.cpp  send_raw.cpp  shell.cpp
modules/lastseen/tmpl/: index.tmpl  lastseen_WebadminUser.tmpl
modules/modperl/: CMakeLists.txt  CString.i  Makefile.gen  Makefile.inc  codegen.pl  functions.cpp  functions.in  modperl.cpp  modperl.i  module.h  pstring.h  startup.pl
modules/modperl/include/: perlfragments.swg
modules/modpython/: CMakeLists.txt  Makefile.gen  Makefile.inc  codegen.pl  compiler.cpp  cstring.i  functions.in  generate_swig_version.cmake  modpython.cpp  modpython.i  module.h  pyeval.py  ret.h  retstring.h  znc.py
modules/modtcl/: CMakeLists.txt  Makefile.inc  binds.tcl  modtcl.tcl
modules/notes/tmpl/: index.tmpl
modules/perform/tmpl/: index.tmpl
modules/po/: CMakeLists.txt  admindebug.bg_BG.po  admindebug.da_DK.po  admindebug.de_DE.po  admindebug.el_GR.po  admindebug.es_ES.po  admindebug.fr_FR.po  admindebug.id_ID.po  admindebug.it_IT.po  admindebug.nl_NL.po  admindebug.pl_PL.po  admindebug.pot  admindebug.pt_BR.po  admindebug.pt_PT.po  admindebug.ro_RO.po  admindebug.ru_RU.po  admindebug.tr_TR.po  adminlog.bg_BG.po  adminlog.da_DK.po  adminlog.de.po  adminlog.de_DE.po  adminlog.el_GR.po  adminlog.es.po  adminlog.es_ES.po  adminlog.fr_FR.po  adminlog.id_ID.po  adminlog.it_IT.po  adminlog.nl_NL.po  adminlog.pl_PL.po  adminlog.pot  adminlog.pt_BR.po  adminlog.pt_PT.po  adminlog.ro_RO.po  adminlog.ru.po  adminlog.ru_RU.po  adminlog.tr_TR.po  alias.bg_BG.po  alias.da_DK.po  alias.de.po  alias.de_DE.po  (+1073 more)
modules/stickychan/tmpl/: stickychan_WebadminChan.tmpl
modules/webadmin/tmpl/: add_edit_chan.tmpl  add_edit_user.tmpl  index.tmpl  listusers.tmpl  settings.tmpl
modules/www/lastseen/: index.tmpl
modules/www/notes/: index.tmpl
modules/www/stickychan/: index.tmpl
modules/www/webadmin/: add_edit_chan.tmpl  add_edit_user.tmpl  del_user.tmpl  index.tmpl  listusers.tmpl  settings.tmpl  traffic.tmpl
modules/www/webchat/: chan.tmpl  index.tmpl
share/man/: CMakeLists.txt
src/: Asio.cpp  Buffer.cpp  CMakeLists.txt  Chan.cpp  Client.cpp  ClientCommand.cpp  Config.cpp  Csocket.cpp  FileUtils.cpp  HTTPSock.cpp  IRCNetwork.cpp  IRCSock.cpp  Listener.cpp  MD5.cpp  Message.cpp  Modules.cpp  Nick.cpp  Query.cpp  SHA256.cpp  SSLVerifyHost.cpp  Server.cpp  Socket.cpp  Template.cpp  Threads.cpp  Translation.cpp  User.cpp  Utils.cpp  WebModules.cpp  ZNCDebug.cpp  ZNCString.cpp  main.cpp  version.cpp  version.cpp.in  znc.cpp
src/po/: CMakeLists.txt  znc.bg_BG.po  znc.da_DK.po  znc.de.po  znc.de_DE.po  znc.el_GR.po  znc.es.po  znc.es_ES.po  znc.fr_FR.po  znc.id_ID.po  znc.it_IT.po  znc.nl_NL.po  znc.pl_PL.po  znc.pot  znc.pt_BR.po  znc.pt_PT.po  znc.ro_RO.po  znc.ru.po  znc.ru_RU.po  znc.tr_TR.po
test/: BufferTest.cpp  CMakeLists.txt  ClientTest.cpp  ConfigTest.cpp  DebugTest.cpp  EscapeTest.cpp  HTTPSockTest.cpp  IRCSockTest.cpp  IRCTest.h  Integration.cpp  Makefile.in  MessageTest.cpp  ModulesTest.cpp  NetworkTest.cpp  NickTest.cpp  QueryTest.cpp  StringTest.cpp  ThreadTest.cpp  UserTest.cpp  UtilsTest.cpp  integration.py  makeconf.py  testmod.cpp
test/integration/: CMakeLists.txt  autoconf-all.cpp  main.cpp  wrapper.py  znctestconfig.h.cmake.in
test/integration/framework/: base.cpp  base.h  cygwin.cpp  cygwin.h  main.cpp  znctest.cpp  znctest.h
test/integration/tests/: core.cpp  modules.cpp  scripting.cpp
(+221 files in other folders)
